# coresight-wire-protocol

./: .gitignore  CMakeLists.txt  LICENCE.txt  RDDIStandardConfig.cmake  README.md  build.bat  build.sh
common_client/: transport_exception.h
common_tcp/: CMakeLists.txt  common_tcp.c  common_tcp.h
common_tcp/tests/: CMakeLists.txt  common_tcp_test.c
cswp/: CMakeLists.txt  cswp_buffer.c  cswp_buffer.h  cswp_types.h
cswp/client/: CMakeLists.txt  cswp_client.c  cswp_client.h  cswp_client_commands.c  cswp_client_commands.h
cswp/doc/: cswp.doxygen  mainpage.md
cswp/doc/html/: annotated.html  classes.html  cswp__buffer_8h.html  cswp__buffer_8h_source.html  cswp__client_8h.html  cswp__client_8h_source.html  cswp__client__commands_8h.html  cswp__client__commands_8h_source.html  cswp__server__cmdint_8h.html  cswp__server__cmdint_8h_source.html  cswp__server__commands_8h.html  cswp__server__commands_8h_source.html  cswp__server__impl_8h.html  cswp__server__impl_8h_source.html  cswp__server__types_8h.html  cswp__server__types_8h_source.html  cswp__types_8h.html  cswp__types_8h_source.html  dir_26218dc8ae062a2fee97c13f355749cb.html  dir_33ff8a1a62a286f9633e615bd2831ea8.html  dir_35641874ca5e8c7d4b9ac72c4a5c1b2e.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_v.html  index.html  menudata.js  structCSWP__BUFFER-members.html  structCSWP__BUFFER.html  struct__cswp__client__t-members.html  struct__cswp__client__t.html  struct__cswp__client__transport__t-members.html  struct__cswp__client__transport__t.html  struct__cswp__server__state__t-members.html  (+7 more)
cswp/doc/html/search/: all_1.js  all_2.js  all_7.js  all_8.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js  variables_9.js  variables_c.js  variables_d.js
cswp/server/: CMakeLists.txt  cswp_server_cmdint.c  cswp_server_cmdint.h  cswp_server_commands.c  cswp_server_commands.h  cswp_server_impl.c  cswp_server_impl.h  cswp_server_types.h
cswp/tcp_transport/: CMakeLists.txt  cswp_tcp_transport.cpp  cswp_tcp_transport.h
cswp/tests/: CMakeLists.txt  cswp_buffer_test.c  cswp_command_test.c  cswp_server_test.c  cswp_test.c  cswp_test.h
cswp/usb_transport/: CMakeLists.txt  cswp_usb_transport.cpp  cswp_usb_transport.h
drivers/: CMakeLists.txt
drivers/linux/: AMIS_FPGA.rules
drivers/windows/: arm_amisfpga.cat  arm_amisfpga.inf  arm_amisfpga_cswp.cat  arm_amisfpga_cswp.inf
ds/: probes.xml
rddi/: rddi.h  rddi_configinfo.h  rddi_debug.h  rddi_event.h  rddi_mem_ap.h  rddi_streaming_trace.h  rddi_trace.h
rddi-memap_cswp/: CMakeLists.txt  buildinfo.h  debug_config.xml  debug_config_tcp.xml  debug_config_usb.xml  env.cpp  env.h  env_map.cpp  env_map.h  rddi_error.cpp  rddi_ex.h  rddi_logger.cpp  rddi_logger.h  rddi_stubs.cpp  utils.cpp  utils.h
rddi-memap_cswp/py_test/: test.py
rddi_streaming_trace/: CMakeLists.txt
rddi_streaming_trace/common/: CMakeLists.txt  api_stubs.cpp  env.cpp  env.h  env_map.cpp  env_map.h  last_error.cpp  last_error.h  st_error.h  streaming_trace_base.cpp  streaming_trace_base.h  util.cpp  util.h
rddi_streaming_trace/rddi_streaming_trace_amis/: CMakeLists.txt  buildinfo.h  coresight_trace.h  streaming_trace_amis.cpp  streaming_trace_amis.h  streaming_trace_usb.cpp  streaming_trace_usb.h
rddi_streaming_trace/streaming_trace_capture/: CMakeLists.txt  main.c  trace_config.xml
tcp_client/: CMakeLists.txt  tcp_device.cpp  tcp_device.h
tcp_client/tests/: CMakeLists.txt  tcp_client_test.cpp
usb_client/: CMakeLists.txt  usb_device.cpp  usb_device.h  usb_device_linux.cpp  usb_device_linux.h  usb_device_windows.cpp  usb_device_windows.h
